force-app/main/default/objects/Direcionamento_os__c/Direcionamento_os__c.object-meta.xml
<CustomObject>
    <label>Direcionamento de OS</label>
    <nameField>
        <label>Descrição</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Direcionamentos de OS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>