force-app/main/default/objects/Direcionamento_os__c/fields/Agendamento_proximo_contato__c.field-meta.xml
<CustomField>
    <fullName>Agendamento_proximo_contato__c</fullName>
    <label>Agendamento próximo contato</label>
    <type>Date</type>
</CustomField>