force-app/main/default/objects/Direcionamento_os__c/fields/Aging_final__c.field-meta.xml
<CustomField>
    <fullName>Aging_final__c</fullName>
    <description>Quantidade de dias do Aging final</description>
    <label>Aging final</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>