force-app/main/default/objects/Direcionamento_os__c/fields/Aging_inicial__c.field-meta.xml
<CustomField>
    <fullName>Aging_inicial__c</fullName>
    <description>Quantidade de dias do Aging inicial</description>
    <label>Aging inicial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>