force-app/main/default/objects/Direcionamento_os__c/fields/Classe__c.field-meta.xml
<CustomField>
    <fullName>Classe__c</fullName>
    <label>Classe</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACESSÓRIOS CARRETA</fullName>
            </value>
            <value>
                <fullName>BT AEROPORTOS</fullName>
            </value>
            <value>
                <fullName>BT CONSTRUCAO CIVIL</fullName>
            </value>
            <value>
                <fullName>BT Industria - Avançado</fullName>
            </value>
            <value>
                <fullName>BT Industria - Basico</fullName>
            </value>
            <value>
                <fullName>BT Industria - Rental</fullName>
            </value>
            <value>
                <fullName>BT MINA JORNADA</fullName>
            </value>
            <value>
                <fullName>BT MINA PRODUTIVIDADE</fullName>
            </value>
            <value>
                <fullName>BT MINA SEGURANÇA</fullName>
            </value>
            <value>
                <fullName>BT MINERACAO GSM</fullName>
            </value>
            <value>
                <fullName>BT PORTO AVANÇADO</fullName>
            </value>
            <value>
                <fullName>BT PORTO BASICO</fullName>
            </value>
            <value>
                <fullName>CARRETA LOG</fullName>
            </value>
            <value>
                <fullName>CARRETA SOLAR</fullName>
            </value>
            <value>
                <fullName>CCO - GESTÃO AVANÇADA</fullName>
            </value>
            <value>
                <fullName>CCO - GESTÃO AVANÇADA IDENTIFICAÇÃO CAVALO</fullName>
            </value>
            <value>
                <fullName>CCO - GESTAO AVANÇADA (POSICIONAMENTO FREQUENTE)</fullName>
            </value>
            <value>
                <fullName>CCO - GESTÃO AVANÇADA REPETIDORA</fullName>
            </value>
            <value>
                <fullName>CCO - GESTÃO DA PRODUTIVIDADE</fullName>
            </value>
            <value>
                <fullName>CCO - GESTAO DA PRODUTIVIDADE (POSICIONAMENTO FREQUENTE)</fullName>
            </value>
            <value>
                <fullName>CCO - MONITORAMENTO LOGÍSTICO</fullName>
            </value>
            <value>
                <fullName>CCO - MONITORAMENTO LOGÍSTICO (POSICIONAMENTO FREQUENTE)</fullName>
            </value>
            <value>
                <fullName>CELULAR/GSM</fullName>
            </value>
            <value>
                <fullName>EUROPA CARRETA CONECTADA - FRIDGE</fullName>
            </value>
            <value>
                <fullName>EUROPA CARRETA CONECTADA - GEOLOC AND USAGE</fullName>
            </value>
            <value>
                <fullName>EUROPA CARRETA CONECTADA - MAINTENANCE AND SAFETY</fullName>
            </value>
            <value>
                <fullName>EXCLUSIVE LIGHT</fullName>
            </value>
            <value>
                <fullName>FAMILIA GSM</fullName>
            </value>
            <value>
                <fullName>FAMILIA SASMOTO</fullName>
            </value>
            <value>
                <fullName>GESTÃO DE FROTAS - INDONÉSIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>