force-app/main/default/objects/Direcionamento_os__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <description>Nome do cliente</description>
    <inlineHelpText>Nome do cliente</inlineHelpText>
    <label>Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>