force-app/main/default/objects/Direcionamento_os__c/fields/Cliente_KA__c.field-meta.xml
<CustomField>
    <fullName>Cliente_KA__c</fullName>
    <label>Cliente KA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Todos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>