force-app/main/default/objects/Direcionamento_os__c/fields/Contato_fora_faixa__c.field-meta.xml
<CustomField>
    <fullName>Contato_fora_faixa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contato fora da faixa</label>
    <type>Checkbox</type>
</CustomField>