force-app/main/default/objects/Direcionamento_os__c/fields/Data_agendamento_final__c.field-meta.xml
<CustomField>
    <fullName>Data_agendamento_final__c</fullName>
    <label>Data de agendamento final</label>
    <type>Date</type>
</CustomField>