force-app/main/default/objects/Direcionamento_os__c/fields/Data_agendamento_inicial__c.field-meta.xml
<CustomField>
    <fullName>Data_agendamento_inicial__c</fullName>
    <label>Data de agendamento inicial</label>
    <type>Date</type>
</CustomField>