force-app/main/default/objects/Direcionamento_os__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <description>ID&#39;s de Tipo do Item da OS</description>
    <label>Motivo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>