force-app/main/default/objects/Direcionamento_os__c/fields/Motivo_noshow__c.field-meta.xml
<CustomField>
    <fullName>Motivo_noshow__c</fullName>
    <label>Motivo de noshow</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NOSHOW_CLIENTE</fullName>
            </value>
            <value>
                <fullName>ERRO_AGENDAMENTO</fullName>
            </value>
            <value>
                <fullName>NOSHOW_TECNICO</fullName>
            </value>
            <value>
                <fullName>FALTA_EQUIPAMENTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>