force-app/main/default/objects/Direcionamento_os__c/fields/Numero_OS__c.field-meta.xml
<CustomField>
    <fullName>Numero_OS__c</fullName>
    <description>Número da OS</description>
    <label>Número da OS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>