force-app/main/default/objects/Direcionamento_os__c/fields/OS_com_agendamento__c.field-meta.xml
<CustomField>
    <fullName>OS_com_agendamento__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OS com agendamento válido</description>
    <label>OS com agendamento</label>
    <type>Checkbox</type>
</CustomField>