force-app/main/default/objects/Direcionamento_os__c/fields/OS_sem_agendamento__c.field-meta.xml
<CustomField>
    <fullName>OS_sem_agendamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OS sem agendamento</label>
    <type>Checkbox</type>
</CustomField>