force-app/main/default/objects/Direcionamento_os__c/fields/OS_sem_agendamento_aging_85_dias__c.field-meta.xml
<CustomField>
    <fullName>OS_sem_agendamento_aging_85_dias__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OS sem agendamento com Aging de 85 dias</description>
    <label>OS sem agendamento Aging 85 dias</label>
    <type>Checkbox</type>
</CustomField>