force-app/main/default/objects/Direcionamento_os__c/fields/OS_sem_direcionamento__c.field-meta.xml
<CustomField>
    <fullName>OS_sem_direcionamento__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OS não direcionada para nenhum atendente</description>
    <label>OS sem direcionamento</label>
    <type>Checkbox</type>
</CustomField>