force-app/main/default/objects/Direcionamento_os__c/fields/OS_sem_servico__c.field-meta.xml
<CustomField>
    <fullName>OS_sem_servico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OS sem serviço</label>
    <type>Checkbox</type>
</CustomField>