force-app/main/default/objects/Direcionamento_os__c/fields/Quantidade_OS__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_OS__c</fullName>
    <label>Quantidade de OS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>