force-app/main/default/objects/Direcionamento_os__c/fields/Regiao_comercial__c.field-meta.xml
<CustomField>
    <fullName>Regiao_comercial__c</fullName>
    <label>Região Comercial</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regiao_comercial</valueSetName>
    </valueSet>
</CustomField>