force-app/main/default/objects/Direcionamento_os__c/fields/Status_OS__c.field-meta.xml
<CustomField>
    <fullName>Status_OS__c</fullName>
    <description>ID&#39;s dos Status da OS</description>
    <label>Status da OS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>