force-app/main/default/objects/Direcionamento_os__c/fields/Status_solicitacao_equipamento__c.field-meta.xml
<CustomField>
    <fullName>Status_solicitacao_equipamento__c</fullName>
    <description>Status solicitação equipamento para distribuição</description>
    <label>Status solicitação equipamento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando estoque CD</fullName>
            </value>
            <value>
                <fullName>Atendido</fullName>
            </value>
            <value>
                <fullName>Estoque CD reabastecido</fullName>
            </value>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Recusado</fullName>
            </value>
            <value>
                <fullName>Sem Solicitação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>