force-app/main/default/objects/Direcionamento_os__c/fields/Tipo_contrato__c.field-meta.xml
<CustomField>
    <fullName>Tipo_contrato__c</fullName>
    <description>ID&#39;s dos tipos de contrato</description>
    <label>Tipo de contrato</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>