force-app/main/default/objects/Direcionamento_os__c/fields/Tipo_OS__c.field-meta.xml
<CustomField>
    <fullName>Tipo_OS__c</fullName>
    <label>Tipo de OS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>