force-app/main/default/objects/Direcionamento_os__c/fields/Tipo_OS_Macro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_OS_Macro__c</fullName>
    <label>Tipo de OS Macro</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_macro_Os</valueSetName>
    </valueSet>
</CustomField>