force-app/main/default/objects/Direcionamento_os__c/fields/Tipo_OS_Micro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_OS_Micro__c</fullName>
    <label>Tipo de OS Micro</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_micro_OS</valueSetName>
    </valueSet>
</CustomField>