force-app/main/default/objects/Direcionamento_os__c/fields/Todas_agendamento_proximo_contato__c.field-meta.xml
<CustomField>
    <fullName>Todas_agendamento_proximo_contato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Todas agendamento próximo contato</label>
    <type>Checkbox</type>
</CustomField>