force-app/main/default/objects/Direcionamento_os__c/fields/Ultima_acao_OS__c.field-meta.xml
<CustomField>
    <fullName>Ultima_acao_OS__c</fullName>
    <label>Última ação da OS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abertura de O.S</fullName>
            </value>
            <value>
                <fullName>Agendamento Comercial</fullName>
            </value>
            <value>
                <fullName>Agendamento com serviço  não executado</fullName>
            </value>
            <value>
                <fullName>Agendamento não realizado/Agenda indisponível</fullName>
            </value>
            <value>
                <fullName>Agendamento Próximo Contato</fullName>
            </value>
            <value>
                <fullName>Agendamento próximo contato URA</fullName>
            </value>
            <value>
                <fullName>Agendamento realizado com sucesso</fullName>
            </value>
            <value>
                <fullName>Agendamento sem Equipamento (Data Futura)</fullName>
            </value>
            <value>
                <fullName>Agendamento sem Reserva de Estoque</fullName>
            </value>
            <value>
                <fullName>Agendamento via Representação</fullName>
            </value>
            <value>
                <fullName>Aguardando Análise de Deslocamento</fullName>
            </value>
            <value>
                <fullName>Aguardando avaliação de deslocamento</fullName>
            </value>
            <value>
                <fullName>Aguardando Carta de Migração</fullName>
            </value>
            <value>
                <fullName>Aguardando Carta de rescisão</fullName>
            </value>
            <value>
                <fullName>Aguardando o 3º Dia</fullName>
            </value>
            <value>
                <fullName>Aguardando Retorno Cliente</fullName>
            </value>
            <value>
                <fullName>Aguardando Retorno da Corretora</fullName>
            </value>
            <value>
                <fullName>Alterada Combinação</fullName>
            </value>
            <value>
                <fullName>Apoio Comercial</fullName>
            </value>
            <value>
                <fullName>Atraso técnico/Agendamento cancelado</fullName>
            </value>
            <value>
                <fullName>Autorizado (O.S.)</fullName>
            </value>
            <value>
                <fullName>Autorizado Instalação</fullName>
            </value>
            <value>
                <fullName>Cadastro Concluído</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Cancelado pela Seguradora</fullName>
            </value>
            <value>
                <fullName>Cidade Não Mapeada</fullName>
            </value>
            <value>
                <fullName>Cliente Desistiu da Instalação</fullName>
            </value>
            <value>
                <fullName>Cliente Desmarcou</fullName>
            </value>
            <value>
                <fullName>Cliente já possui dispositivo anti-furto</fullName>
            </value>
            <value>
                <fullName>Cliente não concorda c/ contrato locação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>